--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 <li><p>19-Sep-2025, Our 2 papers have been accepted to <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;25</b></a>.
 </p>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</a> [<b><font style="color:rgb(138,43,226)">spotlight</font></b>], joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
+<li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;>An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</a> [<b><font style="color:rgb(138,43,226)">spotlight</font></b>], joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
 </p>
 </li>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport</a>, joint work with Hoang Tran, Thanh Tran, Thanh Chu, and Tan Nguyen.
@@ -147,7 +147,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-27 17:54:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-27 17:59:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
