--- a/publication.html
+++ b/publication.html
@@ -25,7 +25,7 @@
 </p>
 <h2>Selected Journals / Conference Papers</h2>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  <br /> 
+<li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  <br /> 
 <b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b><font style="color:rgb(138,43,226)">3.19%</font></b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu. <br />
 (<b><font style="color:rgb(138,43,226)">This paper was selected for a spotlight presentation.</font></b> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
@@ -468,7 +468,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-27 17:54:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-27 17:59:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
