--- a/publication.html
+++ b/publication.html
@@ -323,7 +323,7 @@ Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Wasserstein Barycenter for Large-Scale Multilevel Clustering and Scalable Bayes</font></a> <br />
+<li><p><a href="https://arxiv.org/pdf/1910.04483v1" target=&ldquo;blank&rdquo;><font color="blue">On Scalable Variant of Wasserstein Barycenter</font></a> <br />
 ArXiv, 2019. <br />
 <b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada
 </p>
@@ -468,7 +468,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-27 17:59:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-27 22:56:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
