--- a/publication.html
+++ b/publication.html
@@ -254,6 +254,13 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi. <b
 <p><b>Other Journals / Conference Papers / Preprints</b>
 </p>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev IPM for Graph-Based Measures</font></a>  <br /> 
+ArXiv, 2025. <br />
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Revisiting Tree-Sliced Wasserstein Distance Through the Lens of the Fermat–Weber Problem</font></a>  <br /> 
 Under review. <br /> 
 Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Duy-Tung Pham, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
@@ -468,7 +475,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-27 22:56:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-30 00:06:58 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
