--- a/publication.html
+++ b/publication.html
@@ -254,7 +254,7 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi. <b
 <p><b>Other Journals / Conference Papers / Preprints</b>
 </p>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev IPM for Graph-Based Measures</font></a>  <br /> 
+<li><p><a href="https://arxiv.org/pdf/2510.25591" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev IPM for Graph-Based Measures</font></a>  <br /> 
 ArXiv, 2025. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
 </p>
@@ -475,7 +475,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-30 00:06:58 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-30 13:18:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
