--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 </p>
 </td></tr></table>
 <h2>Research Interests: Machine Learning, Optimal Transport, Kernel Methods <br /></h2>
-<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, especially <i>optimal transport (OT) theory</i>. More concretely, my research objectives are as follows:
+<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, in particular <i>optimal transport (OT) theory</i>. More concretely, my research objectives are as follows:
 </p>
 <ol>
 <li><p>Deepening OT theory: 
 </p>
 <ol>
-<li><p>Breaking the curse of dimensionality for OT with projected 1D-structure, e.g., exploiting graph structure, tree system, tree structure.
+<li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure, e.g., exploiting graph structure, tree system, tree structure.
 </p>
 </li>
 <li><p>Going beyond Lp-structure for variational Wasserstein problems, e.g., leveraging functional geometric structure.
@@ -77,10 +77,10 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 <li><p>19-Sep-2025, Our 2 papers have been accepted to <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;25</b></a>.
 </p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;>An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</a> [<b><font style="color:rgb(138,43,226)">spotlight</font></b>], joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
+<li><p><a href="https://openreview.net/pdf?id=VymXLPX6Ps" target=&ldquo;blank&rdquo;>An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</a> [<b><font style="color:rgb(138,43,226)">spotlight</font></b>], joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
 </p>
 </li>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport</a>, joint work with Hoang Tran, Thanh Tran, Thanh Chu, and Tan Nguyen.
+<li><p><a href="https://openreview.net/pdf?id=41ZbysfW4h" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport</a>, joint work with Hoang Tran, Thanh Tran, Thanh Chu, and Tan Nguyen.
 </p>
 </li></ul>
 </li>
@@ -147,7 +147,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-07 14:37:33 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-11-12 11:30:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
