--- a/publication.html
+++ b/publication.html
@@ -25,7 +25,7 @@
 </p>
 <h2>Selected Journals / Conference Papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=VymXLPX6Ps" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  [<a href="https://www.dropbox.com/scl/fi/n1g2udj6p2balnezsb5eh/LNHF_NeurIPS25__OrliczSobolevTransport_OrliczEPT_Poster.pdf?rlkey=u9zeg7mubz55ywwvqs65ua2qn&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>/<a href="https://www.dropbox.com/scl/fi/nrqq4i108aj6wi8tn2abj/LNHF_NeurIPS25__OrliczSobolevTransport_OrliczEPT_Slide.pdf?rlkey=gpry7tiu3r6ziagac0g5e4fp0&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br /> 
 <b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b><font style="color:rgb(138,43,226)">3.19%</font></b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu. <br />
 (<b><font style="color:rgb(138,43,226)">This paper was selected for a spotlight presentation.</font></b> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
@@ -33,7 +33,7 @@
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>. <br /> 
+<li><p><a href="https://openreview.net/pdf?id=41ZbysfW4h" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>. <br /> 
 <b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. <br />
 Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
@@ -475,7 +475,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-07 14:37:33 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-11-12 11:30:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
