--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </div></div>
 <h2>News</h2>
 <ul>
+<li><p>20-Nov-2025, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;26</b></a>.
+</p>
+</li>
 <li><p>22-Oct-2025, Our paper, entitled <a href="to-be-updated" target=&ldquo;blank&rdquo;>&ldquo;Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel&rdquo;</a> has been accepted to <a href="https://jmlr.org/tmlr/" target=&ldquo;blank&rdquo;><b>TMLR</b></a> journal! This is joint work with Keishi Sando, and Hideitsu Hino.
 </p>
 </li>
@@ -147,7 +150,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-12 11:44:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-11-20 14:17:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
