--- a/professional.html
+++ b/professional.html
@@ -27,7 +27,7 @@
 <li><p>International Conference on Machine Learning (<b>ICML</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>, <a href="https://icml.cc/Conferences/2025/ProgramCommittee" target=&ldquo;blank&rdquo;>2025</a>
+<li><p>Area chair (<b>AC</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>, <a href="https://icml.cc/Conferences/2025/ProgramCommittee" target=&ldquo;blank&rdquo;>2025</a>, 2026
 </p>
 </li>
 <li><p>Program committee: 2015, 2019, 2020, 2021, 2022, 2023
@@ -205,7 +205,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-12 11:44:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-11-20 14:17:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
