--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <a href="https://www.dropbox.com/scl/fi/md0ifgx26s07o43nsx3nr/TamLe2025Sep_CV.pdf?rlkey=z3nkupottxu2brymr7eni4zb5&amp;dl=0" target=&ldquo;blank&rdquo;>CV</a> - <a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research Map</a> <br />
 </p>
 </td></tr></table>
-<h2>Research Interests: Machine Learning, Optimal Transport, Kernel Methods <br /></h2>
-<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, in particular <i>optimal transport (OT) theory</i>. More concretely, my research objectives are as follows:
+<h2>Research Interests: Machine Learning, Optimal Transport, Geometric Methods, Kernel Methods <br /></h2>
+<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, in particular <i>optimal transport (OT) theory</i>. More specially, I have been pursuing two main objectives as follows:
 </p>
 <ol>
 <li><p>Deepening OT theory: 
@@ -44,31 +44,23 @@
 <li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure, e.g., exploiting graph structure, tree system, tree structure.
 </p>
 </li>
-<li><p>Going beyond Lp-structure for variational Wasserstein problems, e.g., leveraging functional geometric structure.
+<li><p>Going beyond Lp geometric structure for variational Wasserstein problems, e.g., leveraging functional geometric structure.
 </p>
 </li></ol>
 </li>
-<li><p>Leveraging OT theoretical insights for data science: 
+<li><p>Leveraging OT theoretical insights for AI: 
 </p>
 <ol>
 <li><p>Designing innovative, and efficient methodologies, e.g., for data valuation, LLM pretraining, diffusion model, generative model.
 </p>
 </li>
-<li><p>Centering on applications with large-scale, complex structured data, e.g., non-Euclidean, dynamic, nonlinearity, corruption.
+<li><p>Centering on applications with large-scale, complex structured data, e.g., non-Euclidean, dynamic, nonlinearity, corruption, perturbation.
 </p>
 </li>
 </ol>
 
 </li>
 </ol>
-<h2>Contact</h2>
-<div class="infoblock">
-<div class="blockcontent">
-<p>10-3 Midori-cho, Tachikawa, Tokyo 190-8562, Japan <br />
-Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br />
-Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
-</p>
-</div></div>
 <h2>News</h2>
 <ul>
 <li><p>20-Nov-2025, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;26</b></a>.
@@ -146,11 +138,22 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 </li>
 </ul>
+<h2>Contact</h2>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
+</p>
+<p>Institute of Statistical Mathematics <br />
+10-3 Midori-cho, Tachikawa, Tokyo 190-8562, Japan <br />
+Office: Room A506B <br />
+<a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br />
+</p>
+</div></div>
 <p><br /><br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-26 19:52:12 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-11-30 10:28:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
