--- a/publication.html
+++ b/publication.html
@@ -33,7 +33,7 @@
 </li>
 </ul>
 <ul>
-<li><p><a href="https://openreview.net/pdf?id=41ZbysfW4h" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>. <br /> 
+<li><p><a href="https://openreview.net/pdf?id=41ZbysfW4h" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>. [<a href="https://www.dropbox.com/scl/fi/dy72pshml63a5s6l3hrcx/TTCLN_NeurIPS25__TreeSlicedEPT_Poster.pdf?rlkey=56q518e75xfhci8r5chkc3ral&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 <b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. <br />
 Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
@@ -474,7 +474,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-30 10:49:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-12-01 09:37:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
