--- a/publication.html
+++ b/publication.html
@@ -40,7 +40,7 @@ Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oas
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=VwoSsFK22P" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
 
 <b><font style="color:rgb(137, 179, 75)">TMLR</font></b>, 2025. <br />
 Keishi Sando, <b>Tam Le</b>, Hideitsu Hino.
@@ -474,7 +474,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-03 16:16:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-12-23 15:24:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
