--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <li><p>20-Nov-2025, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;26</b></a>.
 </p>
 </li>
-<li><p>22-Oct-2025, Our paper, entitled <a href="to-be-updated" target=&ldquo;blank&rdquo;>&ldquo;Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel&rdquo;</a> has been accepted to <a href="https://jmlr.org/tmlr/" target=&ldquo;blank&rdquo;><b>TMLR</b></a> journal! This is joint work with Keishi Sando, and Hideitsu Hino.
+<li><p>22-Oct-2025, Our paper, entitled <a href="https://openreview.net/pdf?id=VwoSsFK22P" target=&ldquo;blank&rdquo;>&ldquo;Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel&rdquo;</a> has been accepted to <a href="https://jmlr.org/tmlr/" target=&ldquo;blank&rdquo;><b>TMLR</b></a> journal! This is joint work with Keishi Sando, and Hideitsu Hino.
 </p>
 </li>
 <li><p>19-Sep-2025, Our 2 papers have been accepted to <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;25</b></a>.
@@ -212,7 +212,7 @@ Office: Room A506B <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-03 16:16:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-12-23 15:24:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
