--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a> <br />
 </p>
 <p>Email: tam[<i>at</i>]ism.ac.jp <br />
-<br /> 
-<a href="https://www.dropbox.com/scl/fi/m6xwc946gms6w7efl0tfp/TamLe2025Nov_CV.pdf?rlkey=dnhauh98pwhx9hfszxd136ndw&amp;dl=0" target=&ldquo;blank&rdquo;>CV</a> - <a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research Map</a> <br />
+</p>
+<p><a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research Map</a> <br />
 </p>
 </td></tr></table>
 <h2>Research Interests: Machine Learning, Optimal Transport, Geometric Methods, Kernel Methods <br /></h2>
@@ -41,17 +41,17 @@
 <li><p>Deepening OT theory: 
 </p>
 <ol>
-<li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure, e.g., exploiting graph structure, tree system, tree structure.
+<li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure, e.g., with graph structure, tree system, tree structure.
 </p>
 </li>
-<li><p>Going beyond Lp geometric structure for variational Wasserstein problems, e.g., leveraging functional geometric structure.
+<li><p>Going beyond Lp geometric structure for variational Wasserstein problems, e.g., with functional geometric structure.
 </p>
 </li></ol>
 </li>
 <li><p>Leveraging OT theoretical insights for AI: 
 </p>
 <ol>
-<li><p>Designing innovative, and efficient methodologies, e.g., for data valuation, LLM pretraining, diffusion model, generative model.
+<li><p>Designing innovative, and efficient methodologies, e.g., for data valuation, LLM pretraining, diffusion models, generative models.
 </p>
 </li>
 <li><p>Centering on applications with large-scale, complex structured data, e.g., non-Euclidean, dynamic, nonlinearity, corruption, perturbation.
@@ -63,6 +63,16 @@
 </ol>
 <h2>News</h2>
 <ul>
+<li><p>27-Jan-2026, Our 2 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;26</b></a>, joint works with Viet-Hoang Tran, Thanh Tran, Thanh Chu, Duy-Tung Pham, Khang Tran, and Tan Nguyen.
+</p>
+<ul>
+<li><p><a href="https://openreview.net/forum?id=HHNQSXaLkF" target=&ldquo;blank&rdquo;>Tree-sliced Sobolev IPM</a>.
+</p>
+</li>
+<li><p><a href="https://openreview.net/forum?id=kDqG03v05B" target=&ldquo;blank&rdquo;>Revisiting Tree-Sliced Wasserstein Distance Through the Lens of the Fermat–Weber Problem</a>.
+</p>
+</li></ul>
+</li>
 <li><p>20-Nov-2025, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;26</b></a>.
 </p>
 </li>
@@ -75,7 +85,7 @@
 <li><p><a href="https://openreview.net/pdf?id=VymXLPX6Ps" target=&ldquo;blank&rdquo;>An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</a> [<b><font style="color:rgb(138,43,226)">spotlight</font></b>], joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
 </p>
 </li>
-<li><p><a href="https://openreview.net/pdf?id=41ZbysfW4h" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport</a>, joint work with Hoang Tran, Thanh Tran, Thanh Chu, and Tan Nguyen.
+<li><p><a href="https://openreview.net/pdf?id=41ZbysfW4h" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport</a>, joint work with Viet-Hoang Tran, Thanh Tran, Thanh Chu, and Tan Nguyen.
 </p>
 </li></ul>
 </li>
@@ -88,29 +98,13 @@
 <li><p>01-May-2025, Our 3 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;25</b></a>.
 </p>
 <ul>
-<li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance: A Geometric Perspective</a>, joint work with Hoang Tran, Trang Pham, Tho Tran, Khoi Nguyen, Thanh Chu, and Tan Nguyen.
+<li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance: A Geometric Perspective</a>, joint work with Viet-Hoang Tran, Trang Pham, Tho Tran, Khoi Nguyen, Thanh Chu, and Tan Nguyen.
 </p>
 </li>
-<li><p><a href="https://openreview.net/pdf?id=SwXYV7CIw9" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance with Nonlinear Projection</a>, joint work with Thanh Tran, Hoang Tran, Thanh Chu, Trang Pham, Laurent El Ghaoui, and Tan Nguyen.
+<li><p><a href="https://openreview.net/pdf?id=SwXYV7CIw9" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance with Nonlinear Projection</a>, joint work with Thanh Tran, Viet-Hoang Tran, Thanh Chu, Trang Pham, Laurent El Ghaoui, and Tan Nguyen.
 </p>
 </li>
 <li><p><a href="https://openreview.net/pdf?id=VhEpf2HFr0" target=&ldquo;blank&rdquo;>Scalable Sobolev IPM for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
-</p>
-</li></ul>
-</li>
-<li><p>25-Mar-2025, Our paper, entitled <a href="https://www.sciencedirect.com/science/article/abs/pii/S1077314225000736" target=&ldquo;blank&rdquo;>&ldquo;Few-Shot Object Detection via Synthetic Features with Optimal Transport&rdquo;</a> has been accepted to <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding" target=&ldquo;blank&rdquo;><b>CVIU</b></a> journal! This is joint work with Khoa Nguyen, Toan Do, Tiep Nguyen, Triet Tran, and Tam V. Nguyen.
-</p>
-</li>
-<li><p>23-Jan-2025, Our 3 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
-</p>
-<ul>
-<li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;>SAVA: Scalable Learning-Agnostic Data Valuation</a>, joint work with Samuel Kessler, and Vu Nguyen.
-</p>
-</li>
-<li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;>Distance-Based Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Khoi Nguyen, Trang Pham, Thanh Chu, and Tan Nguyen.
-</p>
-</li>
-<li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;>Spherical Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Thanh Chu, Khoi Nguyen, Trang Pham, and Tan Nguyen.
 </p>
 </li>
 </ul>
@@ -123,6 +117,22 @@
 
 </p>
 <ul>
+<li><p>25-Mar-2025, Our paper, entitled <a href="https://www.sciencedirect.com/science/article/abs/pii/S1077314225000736" target=&ldquo;blank&rdquo;>&ldquo;Few-Shot Object Detection via Synthetic Features with Optimal Transport&rdquo;</a> has been accepted to <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding" target=&ldquo;blank&rdquo;><b>CVIU</b></a> journal! This is joint work with Khoa Nguyen, Toan Do, Tiep Nguyen, Triet Tran, and Tam V. Nguyen.
+</p>
+</li>
+<li><p>23-Jan-2025, Our 3 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
+</p>
+<ul>
+<li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;>SAVA: Scalable Learning-Agnostic Data Valuation</a>, joint work with Samuel Kessler, and Vu Nguyen.
+</p>
+</li>
+<li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;>Distance-Based Tree-Sliced Wasserstein Distance</a>, joint work with Viet-Hoang Tran, Khoi Nguyen, Trang Pham, Thanh Chu, and Tan Nguyen.
+</p>
+</li>
+<li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;>Spherical Tree-Sliced Wasserstein Distance</a>, joint work with Viet-Hoang Tran, Thanh Chu, Khoi Nguyen, Trang Pham, and Tan Nguyen.
+</p>
+</li></ul>
+</li>
 <li><p>22-Nov-2024, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;25</b></a>.
 </p>
 </li>
@@ -180,7 +190,7 @@
 
 </p>
 <h2>Vita</h2>
-<p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Marco Cuturi</a> and advised by <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Akihiro Yamamoto</a>. I worked as a postdoc at <a href="https://www-als.ics.nitech.ac.jp/en_index.html" target=&ldquo;blank&rdquo;>NITECH</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN AIP</a> between 09/2017 and 07/2021 as a researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a>, Tokyo, in 09/2022, as an assistant professor. 
+<p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Marco Cuturi</a> and advised by Akihiro Yamamoto. I worked as a postdoc at <a href="https://www-als.ics.nitech.ac.jp/en_index.html" target=&ldquo;blank&rdquo;>NITECH</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN AIP</a> between 09/2017 and 07/2021 as a researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a>, Tokyo, in 09/2022, as an assistant professor. 
 </p>
 <h2>Selected Service</h2>
 <ul>
@@ -191,9 +201,7 @@
 </p>
 </li>
 <li><p>Program committee: NeurIPS
-</p>
-</li>
-<li><p>Senior program committee: AAAI
+
 </p>
 </li>
 </ul>
@@ -212,7 +220,7 @@ Office: Room A506B <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-23 15:24:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-01-29 14:47:18 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
