--- a/publication.html
+++ b/publication.html
@@ -25,6 +25,20 @@
 </p>
 <h2>Selected ML Journals / Conference Papers</h2>
 <ul>
+<li><p><a href="https://openreview.net/forum?id=HHNQSXaLkF" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Sobolev IPM</font></a>  <br /> 
+<b><font style="color:rgb(34, 153, 84)">ICLR</font></b>, 2026. <br />
+Viet-Hoang Tran<font color="red">*</font>, Thanh Tran<font color="red">*</font>, Thanh T. Chu, Duy-Tung Pham, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://openreview.net/forum?id=kDqG03v05B" target=&ldquo;blank&rdquo;><font color="blue">Revisiting Tree-Sliced Wasserstein Distance through the Lens of the Fermat–Weber Problem</font></a>  <br /> 
+<b><font style="color:rgb(34, 153, 84)">ICLR</font></b>, 2026. <br />
+Viet-Hoang Tran<font color="red">*</font>, Thanh Tran<font color="red">*</font>, Thanh T. Chu<font color="red">*</font>, Duy-Tung Pham, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://openreview.net/pdf?id=VymXLPX6Ps" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  [<a href="https://www.dropbox.com/scl/fi/n1g2udj6p2balnezsb5eh/LNHF_NeurIPS25__OrliczSobolevTransport_OrliczEPT_Poster.pdf?rlkey=u9zeg7mubz55ywwvqs65ua2qn&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>/<a href="https://www.dropbox.com/scl/fi/nrqq4i108aj6wi8tn2abj/LNHF_NeurIPS25__OrliczSobolevTransport_OrliczEPT_Slide.pdf?rlkey=gpry7tiu3r6ziagac0g5e4fp0&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br /> 
 <b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b><font style="color:rgb(138,43,226)">3.19%</font></b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu. <br />
@@ -261,20 +275,6 @@ ArXiv, 2025. <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Revisiting Tree-Sliced Wasserstein Distance Through the Lens of the Fermat–Weber Problem</font></a>  <br /> 
-Under review. <br /> 
-Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Duy-Tung Pham, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Dynamic-Support Measures and Its Applications</font></a>  <br /> 
-Under review. <br /> 
-Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Duy-Tung Pham, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
-</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://www.dropbox.com/scl/fi/dsforw4iizhwr8lw0v2vl/CVIU2025-Few-Shot-Object-Detection-via-Synthetic-Features-with-Optimal-Transport.pdf?rlkey=uo2ljzicldzg71w7nuv1b5l3r&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
 
 <b><font style="color:rgb(137, 179, 75)">CVIU</font></b> Journal, 2025. <br />
@@ -474,7 +474,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-23 15:24:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-01-29 14:47:18 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
