--- a/professional.html
+++ b/professional.html
@@ -20,10 +20,18 @@
 <div id="toptitle">
 <h1>Tam LE - Professional Activities</h1>
 </div>
-<h2>Professional Service</h2>
-<p><b> Selected ML Conferences / Journals</b>
+<h2>Selected Service on Machine Learning</h2>
+<ul>
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>)
 </p>
 <ul>
+<li><p><a href="https://www.jmlr.org/editorial-board.html" target=&ldquo;blank&rdquo;><b>Editorial board reviewer</b></a> (from 2025)
+</p>
+</li>
+<li><p>Reviewer: 2020, 2021, 2023
+</p>
+</li></ul>
+</li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>)
 </p>
 <ul>
@@ -59,19 +67,12 @@
 <ul>
 <li><p>Program committee: 2015, 2019, 2020, 2021, 2022, 2023, 2024, 2025
 </p>
-</li></ul>
-</li>
-<li><p>Journal of Machine Learning Research (<b>JMLR</b>)
-</p>
-<ul>
-<li><p><a href="https://www.jmlr.org/editorial-board.html" target=&ldquo;blank&rdquo;>Editorial board reviewer</a>
-
-</p>
 </li>
 </ul>
 
 </li>
 </ul>
+<h2>Other Professional Service</h2>
 <p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
 
 
@@ -205,7 +206,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-29 14:47:18 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-02 17:57:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
