--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
 </p>
 </td></tr></table>
 <h2>Research Interests: Machine Learning, Optimal Transport, Geometric Methods, Kernel Methods <br /></h2>
-<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, in particular <i>optimal transport (OT) theory</i>. More specially, I have been pursuing two main objectives as follows:
+<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, in particular <i>optimal transport (OT) theory</i>. More specially, my current interests are as follows:
 </p>
 <ol>
 <li><p>Deepening OT theory: 
 </p>
 <ol>
-<li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure, e.g., with graph structure, tree system, tree structure.
+<li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure, e.g., with graph structure, tree system.
 </p>
 </li>
-<li><p>Going beyond Lp geometric structure for variational Wasserstein problems, e.g., with functional geometric structure.
+<li><p>Going beyond Lp structure for variational Wasserstein problems, e.g., with functional geometric structure.
 </p>
 </li></ol>
 </li>
 <li><p>Leveraging OT theoretical insights for AI: 
 </p>
 <ol>
-<li><p>Designing innovative, and efficient methodologies, e.g., for data valuation, LLM pretraining, diffusion models, generative models.
+<li><p>Designing efficient methodologies, e.g., for data valuation, LLM pretraining, diffusion models, generative models.
 </p>
 </li>
-<li><p>Centering on applications with large-scale, complex structured data, e.g., non-Euclidean, dynamic, nonlinearity, corruption, perturbation.
+<li><p>Centering on applications with large-scale, complex structured data, e.g., non-Euclidean, dynamic, nonlinearity, corruption.
 </p>
 </li>
 </ol>
@@ -220,7 +220,7 @@ Office: Room A506B <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-29 14:47:18 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-02 17:57:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
