--- a/index.html
+++ b/index.html
@@ -29,38 +29,12 @@
 <a href="https://www.ism.ac.jp/souran-en/index_e.html" target=&ldquo;blank&rdquo;>Department of Advanced Data Science</a> <br />
 <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a> <br />
 </p>
-<p>Email: tam[<i>at</i>]ism.ac.jp <br />
+<p>Email: tam[<i>at</i>]ism.ac.jp <br /> 
 </p>
-<p><a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research Map</a> <br />
+<p>Research Interests: machine learning, optimal transport, geometric methods, kernels <br />
+<a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research Map</a> <br />
 </p>
 </td></tr></table>
-<h2>Research Interests: Machine Learning, Optimal Transport, Geometric Methods, Kernel Methods <br /></h2>
-<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, in particular <i>optimal transport (OT) theory</i>. More specially, my current interests are as follows:
-</p>
-<ol>
-<li><p>Deepening OT theory: 
-</p>
-<ol>
-<li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure, e.g., with graph structure, tree system.
-</p>
-</li>
-<li><p>Going beyond Lp structure for variational Wasserstein problems, e.g., with functional geometric structure.
-</p>
-</li></ol>
-</li>
-<li><p>Leveraging OT theoretical insights for AI: 
-</p>
-<ol>
-<li><p>Designing efficient methodologies, e.g., for data valuation, LLM pretraining, diffusion models, generative models.
-</p>
-</li>
-<li><p>Centering on applications with large-scale, complex structured data, e.g., non-Euclidean, dynamic, nonlinearity, corruption.
-</p>
-</li>
-</ol>
-
-</li>
-</ol>
 <h2>News</h2>
 <ul>
 <li><p>27-Jan-2026, Our 2 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;26</b></a>, joint works with Viet-Hoang Tran, Thanh Tran, Thanh Chu, Duy-Tung Pham, Khang Tran, and Tan Nguyen.
@@ -220,7 +194,7 @@ Office: Room A506B <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-02 17:57:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-03 14:42:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
