--- a/professional.html
+++ b/professional.html
@@ -20,7 +20,7 @@
 <div id="toptitle">
 <h1>Tam LE - Professional Activities</h1>
 </div>
-<h2>Selected Service on Machine Learning</h2>
+<h2>Selected Professional Service on Machine Learning</h2>
 <ul>
 <li><p>Journal of Machine Learning Research (<b>JMLR</b>)
 </p>
@@ -72,7 +72,7 @@
 
 </li>
 </ul>
-<h2>Other Professional Service</h2>
+<h2>Others</h2>
 <p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
 
 
@@ -206,7 +206,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-02 17:57:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-03 14:42:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
