--- a/professional.html
+++ b/professional.html
@@ -73,7 +73,7 @@
 </li>
 </ul>
 <h2>Others</h2>
-<p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
+<p><b>Area Chair / Senior Program Committee</b> 
 
 
 
@@ -206,7 +206,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-03 16:44:17 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-03 16:46:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
