--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <h2>Vita</h2>
 <p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Marco Cuturi</a> and advised by Akihiro Yamamoto. I worked as a postdoc at <a href="https://www-als.ics.nitech.ac.jp/en_index.html" target=&ldquo;blank&rdquo;>NITECH</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN AIP</a> between 09/2017 and 07/2021 as a researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a>, Tokyo, in 09/2022, as an assistant professor. 
 </p>
-<h2>Selected Service</h2>
+<h2>Service</h2>
 <ul>
 <li><p>Area chair: ICML, ICLR, AISTATS
 </p>
@@ -194,7 +194,7 @@ Office: Room A506B <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-03 16:46:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-03 16:55:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
