--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 </p>
 <h2>Service</h2>
 <ul>
-<li><p>Area chair: ICML, ICLR, AISTATS
+<li><p>Area chair: <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML</a>, <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;>ICLR</a>, <a href="https://virtual.aistats.org/" target=&ldquo;blank&rdquo;>AISTATS</a>
 </p>
 </li>
-<li><p>Editor board reviewer: JMLR
+<li><p>Editor board reviewer: <a href="https://jmlr.org/" target=&ldquo;blank&rdquo;>JMLR</a>
 </p>
 </li>
-<li><p>Program committee: NeurIPS
+<li><p>Program committee: <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;>NeurIPS</a>
 
 </p>
 </li>
@@ -194,7 +194,7 @@ Office: Room A506B <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-03 16:55:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-03 17:16:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
