--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
 <a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research Map</a> <br />
 </p>
 </td></tr></table>
+<p><br />
+My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, particularly <i>optimal transport (OT) theory</i>. My current interests are as follows:
+</p>
+<ol>
+<li><p>Deepening OT theory: 
+</p>
+<ol>
+<li><p>Breaking the curse-of-dimensionality for OT with projected 1D-structure.
+</p>
+</li>
+<li><p>Going beyond Lp structure for variational Wasserstein problems.
+</p>
+</li></ol>
+</li>
+<li><p>Leveraging OT theoretical insights for AI: 
+</p>
+<ol>
+<li><p>Designing innovative, efficient methodologies.
+</p>
+</li>
+<li><p>Centering on applications with large-scale, complex structured data.
+</p>
+</li>
+</ol>
+
+</li>
+</ol>
 <h2>News</h2>
 <ul>
 <li><p>27-Jan-2026, Our 2 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;26</b></a>, joint works with Viet-Hoang Tran, Thanh Tran, Thanh Chu, Duy-Tung Pham, Khang Tran, and Tan Nguyen.
@@ -194,7 +221,7 @@ Office: Room A506B <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-03 17:16:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-03 20:46:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
